--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.4.0",
+    "axios": "^1.7.7",
+    "azure-maps-control": "^3.5.0",
     "react": "18.3.1",
+    "react-azure-maps": "^1.0.0",
     "react-native": "0.76.1",
-    "react-native-azure-map": "^0.1.5",
-    "react-native-webview": "^13.12.3"
+    "react-native-maps": "^1.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
