update user's heading

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.3.1",
     "react-azure-maps": "^1.0.0",
     "react-native": "0.76.1",
+    "react-native-compass-heading": "^2.0.0",
     "react-native-maps": "^1.20.0"
   },
   "devDependencies": {
