--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/geolocation": "^3.4.0",
     "axios": "^1.7.7",
     "azure-maps-control": "^3.5.0",
+    "lucide-react": "^0.471.0",
     "react": "18.3.1",
     "react-azure-maps": "^1.0.0",
     "react-native": "0.76.1",
