--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,8 +3,16 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
-    <application
+    <queries>
+        <intent>
+            <action android:name="android.speech.RecognitionService" />
+        </intent>
+    </queries>
+    
+    <application  
       android:name=".MainApplication"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
@@ -13,7 +21,7 @@
       android:theme="@style/AppTheme"
       android:supportsRtl="true">
       
-      <!-- Add Google Maps API Key here -->
+      <!-- Google Maps API Key -->
       <meta-data
         android:name="com.google.android.geo.API_KEY"
         android:value="AIzaSyCuJ9ROqwlDZmPJXeXtEBLrUtQAs4AywjI" />
